fix: stretch the background to fit the content

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -2,7 +2,7 @@ $bg-image: url(../../assets/images/Background.png);
 $bg-gradient: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 5e-05) 49.88%, rgba(0, 0, 0, 0.5) 100%);
 
 .app {
-  height: 100vh;
+  min-height: 100vh;
   background: $bg-gradient, $bg-image;
   display: flex;
 }
